# techxgood

./: .gitignore  CONTRIBUTING.md  README.md  card.html  explorer.html  footer.html  header-import.html  index.html  proposals.txt  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: submit-new-project.yaml
.github/workflows/: add-new-project.yaml  crawl_new_projects.yaml  update_db.yaml  update_requirements.yaml
backend/: convert_toml_to_requirements.py  utils.py
backend/crawler/: crawler.py  status.json
backend/manual_etl/: batch_uploader.py  crawl_projects_from_site.py
backend/update_db/: add_single_project.py  recurrent_db_updating.py
conf/: categories.json  order_by_options.json
css/: common.css  explorer.css  index.css  palette_green.css
data/: datamodel.py  partners.json  projects.json
imgs/index/: logo.old
js/: common.js  explorer.js  index.js
scripts/: add_new_project.py  batch_uploader.py  requirements.txt  update_db.py
